feat(footer): Footer terminado

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     --color1: #00070D;
     --color2: #011126;
     --color3: #011C40;
-    --color4: #57d6f2; 
+    --color4: #39A0ED; 
     --color5: #FFFFFF;
 }
 header{
