--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -42,7 +42,7 @@
     font-weight: 500;
     text-shadow: 0 0 20px rgba(0, 0, 0, 0.726);
 }
-.pagination-links ul{
+.pagination-links{
     background-color: var(--color1);
     display: flex;
     justify-content: center;
