--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
 }
 #nasa{
     font-weight: 800;
-    background: url('../../images/fundo-texto.png') center no-repeat;
+    background: url('../../images/fundo-texto.jpg') center top no-repeat;
     background-size: cover;
     color: transparent;
     background-clip: text;
