--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -5,6 +5,12 @@
     list-style: none;
     font-family: "Golos Text", sans-serif;;
 }
+h1{
+    font-size: 2.1em;
+    font-weight: 700;
+    color: var(--color3);
+    margin-bottom: 70px;
+}
 .buttons{
     text-decoration: none;
     color: var(--color5);
@@ -23,4 +29,15 @@
 }
 .text-links:hover{
     text-decoration: underline;
+}
+.container-content{
+    min-height: 70vh;
+    margin: 0 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.margin-containers{
+    margin: 100px 0;
 }
