--- a/front-end/src/pages/PhotoMars/PhotoMars.css
+++ b/front-end/src/pages/PhotoMars/PhotoMars.css
@@ -38,18 +38,20 @@
     height: 100%;
     z-index: 1;
 }
-#opportunity-data, #spirit-data{
-    display: none;
-}
 .rovers-data{
     margin-top: 50px;
-    width: 500px;
+    width: 700px;
 }
 .rovers-data h2{
     color: var(--color3);
     margin-bottom: 15px;
     font-size: 1.8em;
     text-align: center;
+}
+.data-form{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .rovers-information{
    color: #777777;
@@ -65,17 +67,18 @@
     align-items: center;
 }
 .search-date{
-    margin: 50px 0 20px 0px;
+    margin-bottom: 20px;
     font-size: 1.1em;
     font-weight: 600;
+    color: var(--color3);
 }
 .calendar{
     position: relative;
 }
 input[type="date"]{
     background-color:white;
-    color: black;
-    border: 1px solid black;
+    color: #777777;
+    border: 1px solid #777777;
     padding: 10px;
     border-radius: 5px;
 }
@@ -89,7 +92,7 @@ input[type="date"]{
     position: absolute;
     top: 12px;
     right: 13px;
-    color: black;
+    color: #777777;
 }
 .button-submit{
     margin-top: 20px;
@@ -98,4 +101,17 @@ input[type="date"]{
     border-radius: 5px;
     background-color: var(--color3);
     color: white;
+}
+.container-img-mars{
+    margin-top: 50px;
+}
+.no-photo{
+    text-align: center;
+    font-size: 1.1em;
+    font-weight: 600;
+    color: var(--color3);
+}
+.img-mars{
+    max-width: 700px;
+    margin: 10px 0;
 }
