--- a/front-end/src/components/Loading/Loading.css
+++ b/front-end/src/components/Loading/Loading.css
@@ -1,6 +1,5 @@
 .container-gif{
-    width: 100%;
-    height: 70vh;
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
