--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -45,13 +45,9 @@ input[type="radio"], input[type="checkbox"]{
     font-weight: 600;
 }
 .container-content{
-    min-height: 70vh;
-    margin: 0 50px;
+    margin: 20vh 5vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.margin-containers{
-    margin: 100px 0;
 }
