--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -51,3 +51,8 @@ input[type="radio"], input[type="checkbox"]{
     justify-content: center;
     align-items: center;
 }
+.container-display-flex{
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+}
