--- a/front-end/src/components/Pagination/Pagination.css
+++ b/front-end/src/components/Pagination/Pagination.css
@@ -13,4 +13,7 @@
     border: none;
     padding: 5px 10px;
     background-color: white;
+    border: 1px solid #777777;
+    color: #777777;
+    border-radius: 5px;
 }
