--- a/front-end/src/components/Pagination/Pagination.css
+++ b/front-end/src/components/Pagination/Pagination.css
@@ -1,5 +1,6 @@
 .container-pagination{
     display: flex;
+    align-items: center;
     gap: 20px;
 }
 .button-pagination{
@@ -8,10 +9,11 @@
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
+    cursor: pointer;
 }
 .button-current{
     border: none;
-    padding: 5px 10px;
+    padding: 6px 11px;
     background-color: white;
     border: 1px solid #777777;
     color: #777777;
