--- a/front-end/src/components/Footer/Footer.css
+++ b/front-end/src/components/Footer/Footer.css
@@ -61,3 +61,13 @@ footer{
     color: white;
     opacity: .5;
 }
+
+@media(width < 750px){
+   #apis-information{
+    flex-direction: column;
+    gap: 50px;
+   }
+   #documentation, #apis-list{
+    text-align: center;
+   }
+}
