--- a/front-end/src/pages/Asteroids/Asteroids.css
+++ b/front-end/src/pages/Asteroids/Asteroids.css
@@ -3,9 +3,11 @@
     flex-direction: column;
     justify-content: center;
     gap: 10px;
+    max-width: 700px;
+    width: 100%;
 }
 .asteroid{
-    width: 700px;
+    cursor: pointer;
 }
 .drop-drown-asteroid{
     position: relative;
@@ -13,7 +15,8 @@
     height: 100%;
     border: 1px solid #777777;
     border-radius: 5px;
-    display: flex;justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
     padding: 5px 10px;
 }
 .asteroid-name{
