--- a/front-end/src/pages/Home/Home.css
+++ b/front-end/src/pages/Home/Home.css
@@ -19,3 +19,14 @@
     height: 20vh;
     border-radius: 5px;
 }
+
+@media (width < 750px){
+    .content-home{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .image-home{
+        height: auto;
+        width: 100%;
+    }
+}
