--- a/front-end/src/pages/PhotoMars/PhotoMars.css
+++ b/front-end/src/pages/PhotoMars/PhotoMars.css
@@ -1,8 +1,11 @@
 .container-rovers{
     display: flex;
     justify-content: space-between;
+    flex-shrink: 1;
+    flex-wrap: nowrap;
+    max-width: 700px;
+    width: 100%;
     gap: 20px;
-    width: 60%;
 }
 .rovers-box{
     width:150px;
@@ -32,30 +35,32 @@
     background: url('../../images/spirit2.jpg') right center;
 }
 .rovers-data{
-    margin-top: 50px;
-    width: 700px;
+    max-width: 700px;
 }
 .rovers-data h2{
     color: var(--color3);
     margin-bottom: 15px;
     font-size: 1.8em;
     text-align: center;
+    margin: 30px 0;
 }
 .data-form{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.rovers-information{
-   margin-top: 5px;
+.rovers-information-container{
+   display: flex;
+   flex-direction: column;
+   gap: 5px;
 }
 .form-calendar{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
 }
 .search-date{
-    margin-bottom: 20px;
     font-size: 1.1em;
     font-weight: 600;
     color: var(--color3);
@@ -83,15 +88,11 @@ input[type="date"]{
     color: #777777;
 }
 .button-submit{
-    margin-top: 20px;
     padding: 8px 13px;
     border: none;
     border-radius: 5px;
     background-color: var(--color3);
     color: white;
-}
-.container-img-mars{
-    margin-top: 50px;
 }
 .no-photo{
     text-align: center;
@@ -99,7 +100,20 @@ input[type="date"]{
     font-weight: 600;
     color: var(--color3);
 }
+.container-img-mars{
+    margin-top: 50px;
+}
 .img-mars{
     max-width: 700px;
+    width: 100%;
     margin: 10px 0;
+}
+
+@media (width < 750px){
+    .data-form{
+        flex-direction: column;
+    }
+    .form-calendar{
+        margin-top: 30px;
+    }
 }
