ajuste de margin para telas menores

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -56,3 +56,9 @@ input[type="radio"], input[type="checkbox"]{
     flex-direction: column;
     gap: 80px;
 }
+
+@media(width < 750px){
+    .container-content{
+        margin: 15vh 5vw;
+    }
+}
